--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "hue-api": "git+https://github.com/micopiira/hue-remote-api.git",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-json-view": "^1.19.1",
     "react-scripts": "3.1.2"
   },
   "scripts": {
