--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "hue-api": "git+https://github.com/micopiira/hue-remote-api.git",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
