--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "hue-api": "git+https://github.com/micopiira/hue-remote-api.git",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-json-view": "^1.19.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.2"
+    "react-scripts": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
