--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@primer/octicons-react": "^9.2.0",
     "bootstrap": "^4.3.1",
     "hue-api": "git+https://github.com/micopiira/hue-remote-api.git",
     "node-sass": "^4.13.0",
