--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@primer/octicons-react": "^9.3.1",
     "bootstrap": "^4.4.1",
     "hue-api": "git+https://github.com/micopiira/hue-remote-api.git",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-feather": "^2.0.3",
     "react-json-view": "^1.19.1",
     "react-responsive": "^8.0.1",
     "react-router-dom": "^5.1.2",
