--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "bootstrap": "^4.4.1",
     "hue-api": "git+https://github.com/micopiira/hue-remote-api.git",
     "node-sass": "^4.13.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "0.0.0-experimental-33c3af284",
+    "react-dom": "0.0.0-experimental-33c3af284",
     "react-feather": "^2.0.3",
     "react-json-view": "^1.19.1",
     "react-responsive": "^8.0.1",
